# panoocr

./: .gitignore  LICENSE  README.md  pyproject.toml  requirement.txt  run_panoocr.py
assets/: test-pano.macocr.json
panoocr/: __init__.py
panoocr/image/: constants.py
src/panoocr/image/: models.py
src/panoocr/ocr/engines/: paddleocr_engine_.py
